<resources>
    <string name="app_name">Dementia Care Journal</string>

    <!--Overflow Menu Items-->
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="mood">Mood</string>
    <string name="behavior">Behavior</string>
    <string name="diet">Diet</string>
    <string name="medication">Medication</string>

    <!--Main Activity-->
    <string name="profileButton">Profile</string>
    <string name="journalButton">Begin Journaling</string>

    <!-- Login Activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="aboutButton">About</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="registerLink">"Don&#8217;t have an account? Sign up here."</string>
    <string name="signInButton">Sign in</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <!--Create Account Activity-->
    <string name="createAccount">Create Account</string>
    <string name="createUserButton">Register and Log In</string>
    <string name="firstNameEditText">First Name</string>
    <string name="lastNameEditText">Last Name</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="confirmPasswordEditText">Confirm Password</string>

    <!--Profile Activities (user and patient information)-->
    <string name="userProfileTitle">User Profile</string>
    <string name="userPhoneHint">(800) 273&#8211;8255</string>
    <string name="patientTitle">Profile of Dementia Patient</string>
    <string name="patientNameHint">"Patients&#8217; Name"</string>
    <string name="patientDob">Date of Birth</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="doctorName">"Primary Doctor&#8217;s Name"</string>
    <string name="doctorEmail">"Doctor&#8217;s Email Address"</string>
    <string name="doctorPhone">"Doctor&#8217;s Phone Number"</string>

    <!--Note Activities-->
    <string name="notes">Add any comments, or additional notes you would like to journal.</string>

    <!--Logs-->
    <string name="BehaviorLogButton">Save and Continue Journaling</string>
    <string name="behaviorTitle">Behaviors</string>
    <string-array name="behaviors">
        <item>Agitation</item>
        <item>Eating</item>
        <item>Good hygiene</item>
        <item>Hallucinations</item>
        <item>Incoherient</item>
        <item>Incontinence</item>
        <item>Lethargic</item>
        <item>Silent</item>
        <item>Paranoia</item>
        <item>Repetitive speech or actions (Perseveration)</item>
        <item>Self dressing</item>
        <item>Sexually inappropriate behavior</item>
        <item>Shadowing, imitates and follows the caregiver</item>
        <item>Sleeplessness/Sundowning</item>
        <item>Uncooperative and resistant</item>
        <item>Verbal outbursts</item>
        <item>Wandering</item>
    </string-array>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
