<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.dementiacarejournal.CreateAccountActivity"
    android:background="@color/colorPrimary">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/linearLayout">

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/firstNameEditText"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/lastNameEditText"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/lastNameEditText"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/phoneEditText"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/userPhoneHint"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/emailEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/passwordEditText"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/confirmPasswordEditText"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/confirmPasswordEditText"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/createUserButton"/>


    <Button
        android:id="@+id/createUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/createUserButton"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorText" />

</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/createAccount"
    android:textColor="@color/colorPrimaryLight"
    android:textSize="30dp"
    android:textStyle="bold"
    android:layout_above="@+id/linearLayout"
    android:layout_centerHorizontal="true"
    android:nextFocusDown="@+id/firstNameEditText"/>

</RelativeLayout>